crates/aura-macros/tests/boundaries/capability_boundary_invalid_family.stderr
error: capability_boundary family must be one of `capability_accessor`, `authorizer`, `proof_issuer`, or `runtime_helper`
 --> tests/boundaries/capability_boundary_invalid_family.rs:6:14
  |
6 |     family = "not-a-real-family"
  |              ^^^^^^^^^^^^^^^^^^^

warning: unused import: `aura_core::LifecyclePublicationCapability`
 --> tests/boundaries/capability_boundary_invalid_family.rs:1:5
  |
1 | use aura_core::LifecyclePublicationCapability;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
